--- a/src/components/MySkills/index.scss
+++ b/src/components/MySkills/index.scss
@@ -11,11 +11,6 @@ table {
     
 }
 
-  
-  .fade-in {
-    opacity: 1;
-  }
-
 td {
     padding-left: 80px;
     height: 450px;
@@ -32,13 +27,16 @@ td {
 }
 
 #title_myskills {
-    left: 760px;
-    position: absolute;
-    top: 340px;
+    //left: 760px;
+    border-top: 1px solid white;
+    border-bottom: 1px solid white;
+    padding: 20px;
+    position: relative;
+    top: 200px;
     font-size: 75px;
     font-family: 'Snell Roundhand, cursive';
-    color: #383434;
-    //animation: fadeIn 1s 0.5s backwards;
+    color: #ffffff;
+    animation: fadeIn 1s 0.5s backwards;
     
 }
 
@@ -50,10 +48,12 @@ td {
 .contents_skills {
     //opacity: 0;
     //transition: opacity 1s ease-in-out;
+    border-top: 1px solid white;
+    border-bottom: 1px solid white;
     font-size: 20px;
     font-family: Inter;
-    color: #828282;
-    animation: fadeIn 1s 0.5s backwards;
+    color: #d1cdcde0;
+    //animation: fadeIn 1s 0.5s backwards;
     vertical-align: middle;
 }
 
@@ -64,11 +64,15 @@ td {
     font-size: 75px;
     font-family: 'Snell Roundhand, cursive';
     color: white;
-    background-color: rgb(37, 196, 224);
+    background-color: black;
     height: 100px;
+    border-top: 1px solid white;
+    border-bottom: 1px solid white;
 }
 
 #front {
+    border-top: 1px solid white;
+    border-bottom: 1px solid white;
     width: 100%;
     top: 200px;
     text-align: center;
@@ -80,5 +84,18 @@ td {
 }
 
 i {
-    font-size: 300px;
+    font-size: 200px;
+    
 }
+
+#sky {
+    background-image: url("../../assets/images/test3.jpg") !important;
+      background-repeat: repeat;//;no-repeat;
+      
+      background-size: cover;
+      text-align: center;
+      //background-size: 110% 110%;
+      background-position: center center;
+      //animation: shrink 5s infinite alternate;
+      //height: 100vh;
+  }
