--- a/src/components/PersonalProjects/index.scss
+++ b/src/components/PersonalProjects/index.scss
@@ -38,12 +38,12 @@ td {
 #title_text {
     font-size: 64px;
     font-family: Inter;
-    color: black;
+    color: white;
 }
 #title_text_contents {
     font-size: 24px;
     font-family: Inter;
-    color: #828282;
+    color: white;
 }
 
 .contentsTD {
@@ -55,13 +55,13 @@ td {
 .projectName {
     font-size: 24px;
     font-family: Inter;
-    color: black;
+    color: white;
 }
 
 .contents {
     font-size: 20px;
     font-family: Inter;
-    color: #828282;
+    color: white;
     
 }
 
