--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -14,16 +14,27 @@
   float: left;
   
   white-space: nowrap;
+  //
+  opacity: 1;
+  transition-duration: 0.2s;
+}
+
+.flat-button:hover {
+  opacity: 1;
+  transform: scale(1.05);
+  
 }
 .nav-bar {
+    position: sticky;
+    top: 0;
     margin-top: 2px;
     margin-left: 2px;
-    box-shadow: 0.5rem 0.5rem black, -0.5rem -0.5rem #ccc;
-    background: #292828;
+    box-shadow: 0.5rem 0.5rem black, -0.5rem -0.5rem #000;
+    background: #0000006c;
     //background: white;
-    width: 100%;
+    width: 99.9%;
     height: 10px;
-    position: absolute;
+    //position: absolute;
     min-height: 80px;
     //text-align: center;
     nav {
@@ -35,23 +46,15 @@
         top: 0%;
         //margin-top: -120px;
         //width: 100%;
-        text:hover {
-          //text-decoration: underline white;   
-        }
+        
         a {
-          //display: inline-block;
-          padding: 10px;
+          padding: 20px;
+          transition-duration: 0.2s;
           
-          //border-radius: 1px;
-          //font-family: Arial, sans-serif;
-          //font-size: 16px;
-          //color: #007bff;
-          //text-align: center;
-          //text-decoration: none;
-          //transition: background-color 0.3s, color 0.3s;
           font-size: 20px;
           font-family: 'Cursive';
           color: #FFFF;
+          opacity: 1;
           //color: red;
           //display: block;
           line-height: 51px;
@@ -61,14 +64,17 @@
           //padding-left: 20px;
           top: 20px;
           
+          
     
           &:hover {
+            opacity: 1;
+            transform: scale(1.1);
             border-radius: 15px;
             //border: 1px solid white;
             background-color: #c7bfbf09;
             //color: #ffd700;
             
-
+            
           
             &:after {
               opacity: 1;
@@ -168,29 +174,33 @@ text:link {
  
   color: #0000;
   //padding: 16px;
-  font-size: 16px;
+  font-size: 10px;
   
   //  border: red;
+  
 }
 
 .dropdown {
   position: relative;
   
+  
   display: inline-block;
+  
 }
 
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #0000;
+  background: #0000006c;
   
   //min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   //z-index: 1;
+  
 }
 
 .dropdown-contents {
-  color: black;
+  background: #0000006c;
   //padding: 12px 16px;
   text-decoration: none;
   display: block;
@@ -198,18 +208,20 @@ text:link {
 }
 
 .dropdown-contents:hover {
-  background-color: #0000;
+  background-color: #0000006c;
   
 
   }
 
 .dropdown:hover .dropdown-content {
   display: block;
-  background-color: #292828;  
-  margin: 10px;
-  width:170px;
-  height:180px;
+  background-color:  #0000006c;
+  margin: 5px; 
+  padding: 0px;
+  width:200px;
+  height:200px;
   animation: fadeIn 0.4s 0.4s backwards;
+  
 }
   
 
