--- a/src/App.scss
+++ b/src/App.scss
@@ -23,8 +23,8 @@ input, textarea {
 }
 
 body {
-    background-color: blanchedalmond;
-    background-image: url("./assets/images/test2.jpg");
+    //background-color: blanchedalmond;
+    //background-image: url("./assets/images/test2.jpg");
     background-repeat: no-repeat;
     
     background-size:cover;
