--- a/src/components/MySkills/index.scss
+++ b/src/components/MySkills/index.scss
@@ -1,13 +1,18 @@
 @import url("https://fonts.googleapis.com/css?family=Inter");
 @import url("https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css");
 
+#skillimg {
+    border-radius: 25px;
+}
+
 table {
+    
     top: 50px;
     width: 1125px;
     //border-collapse: collapse;
 
     margin-left: auto;
-    margin-right: auto;
+    margin-right: auto; 
     
 }
 
@@ -18,6 +23,7 @@ td {
     vertical-align: top;
     //border:1px solid black;
     border-radius: 20px;
+    z-index: -1;
     
 }
 
@@ -28,15 +34,15 @@ td {
 
 #title_myskills {
     //left: 760px;
-    border-top: 1px solid white;
-    border-bottom: 1px solid white;
+    text-decoration: underline;
     padding: 20px;
     position: relative;
     top: 200px;
     font-size: 75px;
-    font-family: 'Snell Roundhand, cursive';
-    color: #ffffff;
-    animation: fadeIn 1s 0.5s backwards;
+    //font-family: 'Snell Roundhand, cursive';
+    font-family: sans-serif;
+    color: black(255, 217, 0, 0.637);
+    
     
 }
 
@@ -48,13 +54,16 @@ td {
 .contents_skills {
     //opacity: 0;
     //transition: opacity 1s ease-in-out;
-    border-top: 1px solid white;
-    border-bottom: 1px solid white;
+    //border-top: 1px solid black;
+    //border-bottom: 1px solid black;
     font-size: 20px;
     font-family: Inter;
-    color: #d1cdcde0;
+    color: black;
     //animation: fadeIn 1s 0.5s backwards;
     vertical-align: middle;
+    animation: fadeIn 1s 0.5s backwards;
+    font-family: sans-serif;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 .header_types_of_skills {
@@ -62,26 +71,36 @@ td {
     top: 200px;
     text-align: center;
     font-size: 75px;
-    font-family: 'Snell Roundhand, cursive';
-    color: white;
+    //font-family: 'Snell Roundhand, cursive';
+    color: black;
     background-color: black;
     height: 100px;
-    border-top: 1px solid white;
-    border-bottom: 1px solid white;
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+    font-family: sans-serif;
+    
 }
 
 #front {
-    border-top: 1px solid white;
-    border-bottom: 1px solid white;
-    width: 100%;
+    //border-top: 1px solid black;
+    //border-bottom: 1px solid black;
+    //border: 2px solid wheat;
+    //background-color: #ffffff;
+    //width: 100%;
+    //width: 50%;
     top: 200px;
     text-align: center;
-    font-size: 75px;
-    font-family: 'Snell Roundhand, cursive';
-    color: white;
-    background-color: black;
+    margin:auto;
+    font-size: 50px;
+    //font-family: 'Snell Roundhand, cursive';
+    color: black;
+    //background-color: black;
     height: 100px;
-}
+    opacity: 90%;
+    border-radius: 25px;;
+    font-family: sans-serif;
+    
+}   
 
 i {
     font-size: 200px;
@@ -89,9 +108,9 @@ i {
 }
 
 #sky {
-    background-image: url("../../assets/images/test3.jpg") !important;
+        //background-image: url("../../assets/images/test3.jpg") !important;
       background-repeat: repeat;//;no-repeat;
-      
+      //background-color: #6495ED;
       background-size: cover;
       text-align: center;
       //background-size: 110% 110%;
@@ -99,3 +118,11 @@ i {
       //animation: shrink 5s infinite alternate;
       //height: 100vh;
   }
+
+.table_skills  {
+    background-color: #ffffff;
+    border: 1px solid black;
+    border-radius: 25px;
+    opacity: 80%;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+}
