--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -30,7 +30,7 @@
     margin-top: 2px;
     margin-left: 2px;
     box-shadow: 0.5rem 0.5rem black, -0.5rem -0.5rem #000;
-    background: #0000006c;
+    background: #000;
     //background: white;
     width: 99.9%;
     height: 10px;
