--- a/src/components/MySkills/index.scss
+++ b/src/components/MySkills/index.scss
@@ -128,3 +128,16 @@ i {
     box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
     
 }
+
+.hidden {
+    opacity: 0;
+    filter: blur(0px);
+    transform: translateX(-100%);
+    transition: all 1s;
+  }
+  
+  .show {
+    opacity: 1;
+    filter: blur(0);
+    transform:  translateX(0);
+  }
