--- a/src/components/PersonalProjects/index.scss
+++ b/src/components/PersonalProjects/index.scss
@@ -7,7 +7,7 @@
 
 
 table {
-    top: 50%;
+    //top: 50%;
     max-width: 1400px;
     //border-collapse: collapse;
     //margin-left: auto;
@@ -32,7 +32,7 @@ td {
 }
 
 #title {
-    height: 450px;
+    height: 180px;
 }
 
 #title_text {
