--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -72,7 +72,7 @@
             transform: scale(1.1);
             border-radius: 15px;
             //border: 1px solid white;
-            background-color: #c7bfbf09;
+            background-color: #c7bfbf1e;
             //color: #ffd700;
             
             
@@ -104,11 +104,13 @@
     
         
     
-        a.active {
-          svg {
-            color: white;
+        a.active text {
+            //text-decoration: underline white 1px;
             
-          }
+            //background-color: gold;
+            //color: black;
+          
+        
         }
       }
     
@@ -226,3 +228,17 @@ text:link {
 }
   
 
+.navigation-bar button {
+  margin: 0 10px;
+  padding: 8px 16px;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+  font-size: 16px;
+  outline: none;
+}
+
+.navigation-bar button.active {
+  background-color: #007bff;
+  color: white;
+}
